# kpi-lens

./: .env.example  .gitignore  Dockerfile.api  Dockerfile.dashboard  Dockerfile.mcp  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
config/: anomaly.yaml  kpis.yaml  report.yaml
data/seeds/: generate_kpis.py
kpi_lens/: config.py
kpi_lens/anomaly/: base.py  ensemble.py  ml.py  statistical.py  threshold.py
kpi_lens/api/: main.py
kpi_lens/api/routes/: health.py
kpi_lens/dashboard/: app.py
kpi_lens/dashboard/pages/: 01_overview.py  04_llm_analyst.py
kpi_lens/db/: schema.py
kpi_lens/kpis/: definitions.py
kpi_lens/llm/: analyst.py  client.py  prompts.py
kpi_lens/mcp_server/: server.py
tests/: conftest.py
tests/unit/: test_statistical.py
