[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "kpi-lens"
version = "0.1.0"
description = "LLM-powered supply chain KPI anomaly detection and auto-reporting via MCP"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Ali Vaezi", email = "ali.vaezi@studenti.polito.it" }]
requires-python = ">=3.11"
keywords = ["supply-chain", "kpi", "anomaly-detection", "llm", "mcp", "claude"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Core
    "sqlalchemy>=2.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "apscheduler>=3.10",
    "python-dotenv>=1.0",
    # Data & Anomaly Detection
    "pandas>=2.1",
    "numpy>=1.26",
    "scipy>=1.11",
    "statsmodels>=0.14",
    "scikit-learn>=1.4",
    # LLM & MCP
    "anthropic>=0.40",
    "mcp>=1.0",
    # API
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    # Reporting
    "python-pptx>=0.6.23",
    "openpyxl>=3.1",
    "matplotlib>=3.8",
    "Pillow>=10.0",
    # Dashboard
    "streamlit>=1.35",
    "plotly>=5.20",
    # Utilities
    "rich>=13.0",
    "typer>=0.12",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.4",
    "mypy>=1.9",
    "pre-commit>=3.7",
    "pandas-stubs>=2.0",
    "types-PyYAML>=6.0",
]
lstm = [
    "torch>=2.2",  # Optional: LSTM-based anomaly detector
]

[project.scripts]
kpi-lens-seed   = "scripts.seed_database:main"
kpi-lens-scan   = "scripts.run_anomaly_scan:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["kpi_lens*"]

# ── Ruff ──────────────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "ANN", "B", "SIM"]
ignore = [
    "ANN101",  # Missing type annotation for `self`
    "ANN102",  # Missing type annotation for `cls`
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN"]  # Annotations optional in tests

# ── Mypy ──────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
exclude = ["tests/", "scripts/", "data/"]

# ── Pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=kpi_lens --cov-report=term-missing --cov-fail-under=80 -v"

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@abstractmethod",
]
omit = ["kpi_lens/dashboard/*", "kpi_lens/reporting/pdf_converter.py"]
